[gd_scene load_steps=6 format=2]

[ext_resource path="res://grafica/colisoes1.png" type="Texture" id=1]
[ext_resource path="res://grafica/colisoes2.png" type="Texture" id=2]
[ext_resource path="res://script/ParedesCriador.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Colide_E:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 23, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Colide_D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 531, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "crash"
tracks/0/type = "value"
tracks/0/path = NodePath("Colide_E:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 23, 0 ), Vector2( 164, 0 ), Vector2( 23, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Colide_D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 531, 0 ), Vector2( 508, 0 ), Vector2( 531, 0 ) ]
}

[node name="Paredes" type="Node2D"]
script = ExtResource( 3 )

[node name="Colide_D" type="Area2D" parent="." groups=["Enemies"]]
position = Vector2( 531, 0 )
scale = Vector2( 0.36, 0.36 )
__meta__ = {
"_edit_group_": true
}

[node name="Colisoes2" type="Sprite" parent="Colide_D"]
position = Vector2( -0.000244141, 2.77774 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Colide_D" groups=["Enemies"]]
polygon = PoolVector2Array( -513.889, 83.3333, -494.444, 19.4444, -197.222, -155.556, -261.111, -350, -238.889, -350, 622.222, -347.222, 625, 358.333, -263.889, 358.333 )

[node name="Colide_E" type="Area2D" parent="." groups=["Enemies"]]
position = Vector2( 23, 0 )
scale = Vector2( 0.36, 0.36 )
__meta__ = {
"_edit_group_": true
}

[node name="Colisoes2" type="Sprite" parent="Colide_E"]
position = Vector2( 0, -3.05176e-05 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Colide_E" groups=["Enemies"]]
polygon = PoolVector2Array( -702.778, -352.778, 688.889, -352.778, 311.111, -105.556, 344.444, 36.1111, 586.111, 297.222, 586.111, 355.556, -700, 355.556 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/crash = SubResource( 2 )

[connection signal="area_entered" from="Colide_D" to="." method="_on_Colide_D_area_entered"]
[connection signal="area_entered" from="Colide_E" to="." method="_on_Colide_E_area_entered"]
